Read lucky draw data from data/data.json, add footer bar to display program name and LICENSE file. Remove previous conference name and icon for general uses.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <HTML>
 <HEAD>
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=utf-8">
-<TITLE>Hong Kong Open Source Conference LUCKY DRAW!!</TITLE>
+<TITLE>Lucky Draw</TITLE>
 <link rel="stylesheet" type="text/css" href="css/luckydraw.css">
 </HEAD>
 <BODY>
 <CENTER>
-<img src="https://scontent-sit4-1.xx.fbcdn.net/v/t1.0-9/10846200_1603758429892368_5636211845626003390_n.png?oh=adfff0bb5d45d8647092e00c1c1af37c&oe=589844BF" />
-<div id="eventname">Hong Kong Open Source Conference</div>
 <div id="sessionname">LUCKY DRAW!!</div>
 <INPUT TYPE="button" value="Draw" onClick="drawNext();">
 <div id="luckyperson"></div>
 <div id="drawhistory"></div>
 </CENTER>
-<script type="text/javascript" src="js/data.js"></script>
+<!-- Bottom Bar -->
+<div class="bottom-bar">
+Lucky Draw released under GNU GPL 3 (<a href="https://github.com/sammyfung/luckydraw" target="_blank">Source Code</a>)
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="js/luckydraw.js"></script>
 </BODY>
