add Open Source as default event

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <HTML>
 <HEAD>
 <META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=utf-8">
-<TITLE>Lucky Draw</TITLE>
+<TITLE>Lucky Draw - Open Source</TITLE>
 <link rel="stylesheet" type="text/css" href="css/luckydraw.css">
 </HEAD>
 <BODY>
 <CENTER>
+<div id="eventname">Open Source</div>
 <div id="sessionname">LUCKY DRAW!!</div>
 <INPUT TYPE="button" value="Draw" onClick="drawNext();">
 <div id="luckyperson"></div>
